Work in progress saved. This will be rebased later!

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -246,41 +246,14 @@
   "enrollApprovalView.list.noWaitingUsers": "No users awaiting approval.",
 
   "SERVICETAK": "SERVICETAK",
-  "serviceTak.grabZip.grabbedModalTitle": "Client package downloaded.",
-  "serviceTak.grabZip.grabbedModalDescription": "The Client package has been downloaded. Load the client package to TAK according to the Quickstart Guide. <br /> <br /> <em>Package name:</em>",
-  "serviceTak.grabZip.grabbingGenericError": "Generic error: downloading the client package failed. Please try again later.",
-  "serviceTak.grabZip.grabbingErrorTitle": "Error",
-  "serviceTak.grabZip.grabbingErrorDescription": "Downloading the client package failed. Please try again later. <br /> <br /> <em>Error message from the application:</em>",
-  "serviceTak.foldableCardTitle": "TAK",
-  "serviceTak.serviceInfoCardTitle": "TAK Situational Awareness Application",
-  "serviceTak.unfoldableCardTitle": "How to get started",
-  "serviceTak.step1Description": "<strong>Quickstart Guide</strong> tells you how to start using TAK on your device.",
-  "serviceTak.step2Description": "The <strong>Usage Guide</strong> tells you how to use the application, according to our standard model.",
-  "serviceTak.step3Description": "Download the <strong>Client Package</strong> and install it to your TAK device according to the Quickstart Guide, to get using the app.",
-  "serviceTak.guideButton.quickStart": "Quickstart",
-  "serviceTak.guideButton.usage": "Usage Guide",
-  "serviceTak.grabZipButton": "Download your Client Package",
-  "serviceTak.grabZipButton.loading": "Loading...",
+
+  "downloadModal.genericErrorMessage": "Unidentified error.",
+  "downloadModal.errorFromApplication": "Error message from the application:",
+  "downloadModal.downloadDescription": "You are about to download your <package /> as <button /> -compatible.<br /><br />Is this correct? If not, please change it using the selector above as necessary.",
 
   "TAKZIPDOWNLOAD": "TAKZIPDOWNLOAD",
-  "takZipDownload.downloadTitle": "Download Your Client Package",
-  "takZipDownload.downloadButton": "Download Client Package",
-  "takZipDownload.downloadDescriptionPart1": "You are about to download your TAK Client Package as",
-  "takZipDownload.downloadDescriptionPart2": "-compatible.",
-  "takZipDownload.downloadDescriptionPart3": "Is this correct? If not, please change it using the selector above as necessary.",
-  "takZipDownload.downloadSuccessTitle": "Client Package Downloaded.",
-  "takZipDownload.downloadSuccessDescription": "Your Client Package has been downloaded. Please install it to your application, according to the Quickstart Guide.",
-  "takZipDownload.downloadErrorTitle": "Error in Downloading Client Package:",
-  "takZipDownload.downloadErrorDescription": "Downloading your Client Package failed. Please try again later.",
-  "takZipDownload.errorFromApplication": "Error message from the application:",
-  "takZipDownload.genericErrorMessage": "Unidentified error.",
-  "takZipDownload.androidOrWin": "Android ATAK or Windows WinTAK",
-  "takZipDownload.osOptions.ios": "iOS ITAK",
-  "takZipDownload.iAmDownloading": "Fetching your package...",
 
   "SERVICETAKUSAGECARD": "SERVICETAKUSAGECARD",
-  "serviceTakUsageCard.title": "Purpose",
-  "serviceTakUsageCard.content": "<ul><li>Real-time tracking of friendlies <em>(GPS).</em></li><li>Send observations to the command post (HQ) for interpretation.</li><li>Follow the <strong>Recon Feed</strong> that your command post (HQ) creates for your unit.</li></ul>",
 
   "SERVICETAKUSAGECONTENTS": "SERVICETAKUSAGECONTENTS",
   "serviceTakUsageContents.title": "Guide sections",
@@ -309,7 +282,6 @@
 
   "SERVICETAKUSAGEVIEW": "SERVICETAKUSAGEVIEW",
   "serviceTakUsageView.usageModel": "Usage Model",
-  "serviceTakUsageView.navbarTitle": "TAK: Usage",
   "serviceTakUsageView.serviceInfoCardTitle": "TAK - Usage",
   "serviceTakUsageView.serviceInfoCardDetails": "Take  TAK to use with each platform with the instructions below. <br/> <br/> The easiest way to do it, is to work <strong>with a partner</strong> where one fighter displays the instructions, and the other follows them.",
   "serviceTakUsageView.androidTitle": "Android",
@@ -317,9 +289,7 @@
   "serviceTakUsageView.windowsTitle": "Windows",
 
   "SERVICETAKQUICKSTARTVIEW": "SERVICETAKQUICKSTARTVIEW",
-  "serviceTakQuickstartView.navbarTitle": "TAK: Quickstart",
   "serviceTakQuickstartView.serviceInfoCardTitle": "Get Started with TAK!",
-  "serviceTakQuickstartView.serviceInfoCardDetails": "Select the setup instructions for your device. <br /><span>The easiest way to learn how to do it, is to work <strong>with a partner</strong> where one fighter displays the instructions, and the other follows them.</span>",
   "serviceTakQuickstartView.androidTitle": "Android",
   "serviceTakQuickstartView.iosTitle": "iOS",
   "serviceTakQuickstartView.windowsTitle": "Windows",
