--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -246,41 +246,14 @@
   "enrollApprovalView.list.noWaitingUsers": "Ei hyväksyntää odottavia käyttäjiä.",
 
   "SERVICETAK": "SERVICETAK",
-  "serviceTak.grabZip.grabbedModalTitle": "Viestiperusteet ladattu.",
-  "serviceTak.grabZip.grabbedModalDescription": "Viestiperustepaketti ladattu. Paketti tulee ladata sovellukseen. Seuraa käyttöönotto-ohjeita. <br /> <br /> <em>Paketin nimi:</em>",
-  "serviceTak.grabZip.grabbingGenericError": "Viestiperustepaketin lataaminen epäonnistui. Yritä uudelleen myöhemmin.",
-  "serviceTak.grabZip.grabbingErrorTitle": "Virhe",
-  "serviceTak.grabZip.grabbingErrorDescription": "Viestiperustepaketin lataaminen epäonnistui. Yritä uudelleen myöhemmin. <br /> <br /> <em> Virheilmoitus sovellukselta:</em>",
-  "serviceTak.foldableCardTitle": "TAK",
-  "serviceTak.serviceInfoCardTitle": "Tilannekuvasovellus TAK",
-  "serviceTak.unfoldableCardTitle": "Näin otat käyttöön",
-  "serviceTak.step1Description": "<strong>Käyttöönotto-ohje</strong> opastaa palvelun käyttöönoton laitteellesi.",
-  "serviceTak.step2Description": "Ohje <strong>Käyttö joukossa</strong> opastaa, miten käytät sovellusta perusmallin mukaisesti.",
-  "serviceTak.step3Description": "<strong>Viestiperustepaketti</strong> sisältää ladattavat henkilökohtaiset perusteesi.",
-  "serviceTak.guideButton.quickStart": "Käyttöönotto",
-  "serviceTak.guideButton.usage": "Käyttö joukossa",
-  "serviceTak.grabZipButton": "Lataa viestiperustepaketti",
-  "serviceTak.grabZipButton.loading": "Ladataan...",
+
+  "downloadModal.genericErrorMessage": "Tunnistamaton virhe.",
+  "downloadModal.errorFromApplication": "Virheilmoitus sovellukselta:",
+  "downloadModal.downloadDescription": "Olet lataamassa <package /> <button /> -yhteensopivana.<br /><br />Vastaako tämä laitettasi? Jos ei, muuta sitä tarvittaessa yltä valikosta.",
 
   "TAKZIPDOWNLOAD": "TAKZIPDOWNLOAD",
-  "takZipDownload.downloadTitle": "Lataa viestiperustepakettisi",
-  "takZipDownload.downloadButton": "Lataa viestiperustepaketti",
-  "takZipDownload.downloadDescriptionPart1": "Olet lataamassa viestiperustepakettiasi",
-  "takZipDownload.downloadDescriptionPart2": "-yhteensopivana.",
-  "takZipDownload.downloadDescriptionPart3": "Vastaako tämä laitettasi? Jos ei, muuta sitä tarvittaessa yltä valikosta.",
-  "takZipDownload.downloadSuccessTitle": "Viestiperustepaketti ladattu.",
-  "takZipDownload.downloadSuccessDescription": "Viestiperustepaketti ladattu. Lataa paketti sovellukseen käyttöönotto-ohjeiden mukaisesti.",
-  "takZipDownload.downloadErrorTitle": "Virhe viestiperustepaketin lataamisessa:",
-  "takZipDownload.downloadErrorDescription": "Viestiperustepaketin lataaminen epäonnistui. Yritä myöhemmin uudelleen.",
-  "takZipDownload.errorFromApplication": "Virheilmoitus sovellukselta:",
-  "takZipDownload.genericErrorMessage": "Tunnistamaton virhe.",
-  "takZipDownload.androidOrWin": "Android ATAK tai Windows WinTAK",
-  "takZipDownload.osOptions.ios": "iOS ITAK",
-  "takZipDownload.iAmDownloading": "Hankin perustepakettiasi...",
 
   "SERVICETAKUSAGECARD": "SERVICETAKUSAGECARD",
-  "serviceTakUsageCard.title": "Käyttötarkoitus lyhyesti",
-  "serviceTakUsageCard.content": "<ul><li>Käyttäjiesi seuranta reaaliajassa <em>(GPS).</em></li><li>Lähetä havaintoja komentopaikalle. (HQ) tulkittavaksi</li><li>Seuraa <strong>Recon Feediä</strong>, mitä komentopaikka (HQ) muodostaa joukollesi.</li></ul>",
 
   "SERVICETAKUSAGECONTENTS": "SERVICETAKUSAGECONTENTS",
   "serviceTakUsageContents.title": "Ohjeen osat",
@@ -309,7 +282,6 @@
 
   "SERVICETAKUSAGEVIEW": "SERVICETAKUSAGEVIEW",
   "serviceTakUsageView.usageModel": "Käyttömalli",
-  "serviceTakUsageView.navbarTitle": "TAK: Käyttö joukossa",
   "serviceTakUsageView.serviceInfoCardTitle": "TAK - Käyttö joukossa",
   "serviceTakUsageView.serviceInfoCardDetails": "Ota TAK perusmallin mukaiseen käyttöön kullekin alustalle alla olevien ohjeiden avulla. Helpoin tapa tehdä käyttöönotto on <strong>parin kanssa</strong> siten, että toinen taistelija näyttää ohjetta ja toinen tekee.",
   "serviceTakUsageView.androidTitle": "Android",
