Fix takusagewin to match present situation

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -683,8 +683,8 @@
   "takUsageWin2.unfoldableCard1.step1": "In WinTAK's toolbar, the <strong>Home Tab</strong> contains Data Sync tools.",
   "takUsageWin2.unfoldableCard1.step2": "This guide assumes you are operating WinTAK as a <strong>command post</strong>, thus you create the necessary feeds. <br /> <br /> Press <strong>New Feed</strong>.",
   "takUsageWin2.unfoldableCard1.note1": "Note. At the Command Post, <em>one user</em> creates the necessary feeds, and other Command Post users as well as rest of the unit use them!",
-  "takUsageWin2.unfoldableCard1.step3": "Create a new <strong>Feed</strong> with the following details: <ul><li><strong>Name</strong>: Recon</li><li><strong>Group</strong>: Public</li><li><strong>Default Role</strong>: Read Only</li></ul>",
-  "takUsageWin2.unfoldableCard1.note2": "<em>(NOTE: The default group setting needs to be changed to <strong>Read Only</strong>.)</em>",
+  "takUsageWin2.unfoldableCard1.step3": "Create a new <strong>Feed</strong> with the following details: <ul><li><strong>Name</strong>: Recon</li><li><strong>Group</strong>: tak_default</li><li><strong>Default Role</strong>: Read Only</li></ul>",
+  "takUsageWin2.unfoldableCard1.note2": "<em>(NOTE: The default group setting needs to be changed to <strong>tak_default</strong> and the default role setting to <strong>Read Only</strong>.)</em>",
   "takUsageWin2.unfoldableCard1.step4": "The new feed is created. It immediately appears as subscribed in the Data Sync menu for the feed creator.",
   "takUsageWin2.unfoldableCard2.title": "2. Other Command Post Users Subscribe to the Feed",
   "takUsageWin2.unfoldableCard2.step1": "Other command post (WinTAK) users subscribe to the created feeds, typically the <strong>RECON</strong> feed.",
