--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -684,8 +684,8 @@
   "takUsageWin2.unfoldableCard1.step1": "WinTAKin työkalurivillä <strong>Home Tab</strong>issä on Data Sync-työkalut.",
   "takUsageWin2.unfoldableCard1.step2": "Tämä ohje olettaa, että toimit WinTAKilla <strong>komentopaikkana</strong> ja siksi luot tarvittavat feedit. <br /> <br /> Paina <strong>New Feed</strong>.",
   "takUsageWin2.unfoldableCard1.note1": "Huom. Komentopaikalla <em>yksi käyttäjä</em> luo tarvittavat feedit, ja muut ottavat ne käyttöön!",
-  "takUsageWin2.unfoldableCard1.step3": "Luo uusi <strong>Feed</strong> seuraavilla tiedoilla: <ul><li><strong>Name</strong>: Recon</li><li><strong>Group</strong>: Public</li><li><strong>Default Role</strong>: Read Only</li></ul>",
-  "takUsageWin2.unfoldableCard1.note2": "<em>(HUOMAA: Groupin oletusasetus pitää vaihtaa asetukseen <strong>Read Only</strong>.)</em>",
+  "takUsageWin2.unfoldableCard1.step3": "Luo uusi <strong>Feed</strong> seuraavilla tiedoilla: <ul><li><strong>Name</strong>: Recon</li><li><strong>Group</strong>: tak_default</li><li><strong>Default Role</strong>: Read Only</li></ul>",
+  "takUsageWin2.unfoldableCard1.note2": "<em>(HUOMAA: Oletusasetus 'role' pitää vaihtaa asetukseen <strong>Read Only</strong>. ja oletusasetus 'group' asetukseen <strong>tak_default</strong>.)</em>",
   "takUsageWin2.unfoldableCard1.step4": "Uusi feed on luotu. Feedin luojalla se näkyy heti tilattuna Data Sync-valikossa.",
   "takUsageWin2.unfoldableCard2.title": "2. Muut KNTOP-käyttäjät tilaavat feedin",
   "takUsageWin2.unfoldableCard2.step1": "Muut komentopaikan (WinTAKin) käyttäjät tilaavat itselleen luodut feedit, perusmallissa <strong>RECON</strong>-feedin.",
