--- a/assetSetStore/neutral/locale/fi.json
+++ b/assetSetStore/neutral/locale/fi.json
@@ -1,6 +1,6 @@
 {
   "COMMON-VERBS": "COMMON-VERBS",
-  "footer.feedbackFormLink": "https://docs.google.com/forms/d/e/1FAIpQLSehHTASMmqszEMOVOwMvjUNOj-lcEGskk58sUjsmurJDlvFZw/viewform",
+  "footer.feedbackForm": "https://docs.google.com/forms/d/e/1FAIpQLSehHTASMmqszEMOVOwMvjUNOj-lcEGskk58sUjsmurJDlvFZw/viewform",
 
   "FOOTERS": "FOOTERS",
   "footer.allRightsReservedSecond": "RM-UI, PVATK-logo & taustakuvat:",
