--- a/assetSetStore/fdf/locale/en.json
+++ b/assetSetStore/fdf/locale/en.json
@@ -1,6 +1,7 @@
 {
   "COMMON-VERBS": "COMMON-VERBS",
-  "footer.feedbackFormLink": "https://docs.google.com/forms/d/1BXMxeTt5TtmuhX9XsiZTH2yl-Fko-NVPUumvu40TUAM/viewform",
+  "footer.feedbackFormText": "Feedback? Please let the developers know using this form!",
+  "footer.feedbackForm": "https://docs.google.com/forms/d/1BXMxeTt5TtmuhX9XsiZTH2yl-Fko-NVPUumvu40TUAM/viewform",
 
   "FOOTERS": "FOOTERS",
   "footer.allRightsReservedSecond": "FDF-UI, The FDF Logo & Background Images:",
