Set navbar logo size using dynamic assets & few language fixes
Else things look funny

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -43,11 +43,11 @@
   "error-occured": "An unidentified error occurred.",
   "login-to-service": "Log In to:",
   "loading": "Loading...",
-  "login-input-code": "Enter Login Code here",
-  "login-with-code": "Login with Code",
+  "login-input-code": "If creating an ID, type an Invite Code below",
+  "login-with-code": "Create an ID",
   "login-code-required": "Login code is required",
   "login-await-response": "Awaiting response...",
-  "login-i-have-keys": "Got keys",
+  "login-i-have-keys": "Login with your ID",
   "code-is-wrong": "Login code incorrect",
 
   "CALLSIGNSETUPVIEW": "CALLSIGNSETUPVIEW",
