--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -58,7 +58,7 @@
   "callsignsetup-callsign-allowed-chars": "Peitenimen maksimipituus on 30 merkkiä",
   "callsignsetup-give-your-callsign": "Anna peitenimesi.",
   "callsignsetup-enter-callsign-title": "Peitenimesi?",
-  "callsignsetup-enter-callsign-detail": "Peitenimi on tunnisteesi palveluissa. Anna sinulle käsketyn mukainen peitenimi.",
+  "callsignsetup-enter-callsign-detail": "Tervetuloa! Olet luomassa identiteettiä tähän palveluun. Peitenimi on tunnisteesi palveluissa. Anna sinulle käsketyn mukainen peitenimi.",
   "callsignsetup-your-callsign": "Peitenimesi",
 
   "ENROLLMENTVIEW": "ENROLLMENTVIEW",
