Refactored to use newer Rune implementation https://github.com/pvarki/rasenmaeher-ui/issues/10

--- a/src/views/products/data/translations/ServiceTak.en.json
+++ b/src/views/products/data/translations/ServiceTak.en.json
@@ -9,5 +9,25 @@
   "serviceTakUsageCard.content": "<ul><li>Real-time tracking of friendlies <em>(GPS).</em></li><li>Send observations to the command post (HQ) for interpretation.</li><li>Follow the <strong>Recon Feed</strong> that your command post (HQ) creates for your unit.</li></ul>",
   "serviceTak.guideButton.quickStart": "Quickstart",
   "serviceTak.guideButton.usage": "Usage Guide",
-  "serviceTak.grabZipButton": "Download your Client Package"
+  "serviceTak.grabZipButton": "Download your Client Package",
+  "serviceTakUsageView.serviceInfoCardDetails": "Take  TAK to use with each platform with the instructions below. <br/> <br/> The easiest way to do it, is to work <strong>with a partner</strong> where one fighter displays the instructions, and the other follows them.",
+  "serviceTakQuickstartView.serviceInfoCardTitle": "Get Started with TAK!",
+  "serviceTakQuickstartView.serviceInfoCardDetails": "Select the setup instructions for your device. <br /><span>The easiest way to learn how to do it, is to work <strong>with a partner</strong> where one fighter displays the instructions, and the other follows them.</span>",
+  "serviceTakQuickstartView.androidTitle": "Android",
+  "serviceTakQuickstartView.iosTitle": "iOS",
+  "serviceTakQuickstartView.windowsTitle": "Windows",
+  "serviceTakQuickstartView.navbarTitle": "TAK: Quickstart",
+  "takQuickstartAndroid1.statusBarTitle": "Install the applications (1/5)",
+  "takQuickstartAndroid1.navbarTitle": "ATAK Quickstart",
+  "takQuickstartAndroid1.serviceInfoCard.details": "ATAK Quickstart - phase 1: <strong>install the applications</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them.",
+  "takQuickstartAndroid1.unfoldableCard1.title": "1. Download the applications",
+  "takQuickstartAndroid1.unfoldableCard1.description1": "<h3>Download ATAK (1/2)</h3><strong>Download</strong> the ATAK-CIV app from the Play Store and install it. Download link below:",
+  "takQuickstartAndroid1.unfoldableCard1.description2": "<h3>b. Download ATAK Data Sync-plugin (2/2)</h3><strong>Download</strong> the ATAK Data Sync-plugin, and install it. Download link below:",
+  "takQuickstartAndroid1.unfoldableCard2.title": "2. Download your Client Package",
+  "takQuickstartAndroid1.unfoldableCard2.description1": "Download your client packege  by pressing the green <strong>Download your Client Package</strong> button. You can access the same button from the front page, too.<br><br>Save the .zip file.",
+  "takQuickstartAndroid1.unfoldableCard2.description2": "",
+  "takQuickstartAndroid1.unfoldableCard3.title": "3. Open the ATAK app and grant it the requested permissions",
+  "takQuickstartAndroid1.unfoldableCard3.description1": "Open the app. Grant all permissions the application requests.",
+  "takQuickstartAndroid1.unfoldableCard3.description2": "<em>If the application gives an error message, select Wait.</em>",
+  "takQuickstartAndroid1.serviceInfoCardTitle": "ATAK"
 }
