--- a/src/views/products/data/translations/ServiceTak.fi.json
+++ b/src/views/products/data/translations/ServiceTak.fi.json
@@ -2,5 +2,32 @@
   "serviceTak.foldableCardTitle": "TAK",
   "serviceTak.serviceInfoCardTitle": "Tilannekuvasovellus TAK",
   "serviceTak.unfoldableCardTitle": "Näin otat käyttöön",
-  "serviceTak.quickstartGuide": "Quickstart Guide"
+  "serviceTak.step1Description": "<strong>Käyttöönotto-ohje</strong> opastaa palvelun käyttöönoton laitteellesi.",
+  "serviceTak.step2Description": "Ohje <strong>Käyttö joukossa</strong> opastaa, miten käytät sovellusta perusmallin mukaisesti.",
+  "serviceTak.step3Description": "<strong>Viestiperustepaketti</strong> sisältää ladattavat henkilökohtaiset perusteesi.",
+  "serviceTakUsageCard.title": "Käyttötarkoitus lyhyesti",
+  "serviceTakUsageCard.content": "<ul><li>Käyttäjiesi seuranta reaaliajassa <em>(GPS).</em></li><li>Lähetä havaintoja komentopaikalle. (HQ) tulkittavaksi</li><li>Seuraa <strong>Recon Feediä</strong>, mitä komentopaikka (HQ) muodostaa joukollesi.</li></ul>",
+  "serviceTak.guideButton.quickStart": "Käyttöönotto",
+  "serviceTak.guideButton.usage": "Käyttö joukossa",
+  "serviceTak.grabZipButton": "Lataa viestiperustepaketti",
+  "serviceTakUsageView.serviceInfoCardDetails": "Ota TAK perusmallin mukaiseen käyttöön kullekin alustalle alla olevien ohjeiden avulla. Helpoin tapa tehdä käyttöönotto on <strong>parin kanssa</strong> siten, että toinen taistelija näyttää ohjetta ja toinen tekee.",
+  "serviceTakQuickstartView.serviceInfoCardTitle": "Ota TAK käyttöön!",
+  "serviceTakQuickstartView.serviceInfoCardDetails": "Valitse käyttöönotto-ohje laitteesi mukaan. <br /><span>Helpoin tapa tehdä käyttöönotto on <strong>parin kanssa</strong> siten, että toinen taistelija näyttää ohjetta ja toinen tekee.</span>",
+  "serviceTakQuickstartView.androidTitle": "Android",
+  "serviceTakQuickstartView.iosTitle": "iOS",
+  "serviceTakQuickstartView.windowsTitle": "Windows",
+  "serviceTakQuickstartView.navbarTitle": "TAK: Käyttöönotto",
+  "takQuickstartAndroid1.statusBarTitle": "Asenna sovellukset (1/5)",
+  "takQuickstartAndroid1.navbarTitle": "ATAK käyttöönotto",
+  "takQuickstartAndroid1.serviceInfoCard.details": "ATAK käyttöönotto - vaihe 1: <strong>asenna sovellukset</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee.",
+  "takQuickstartAndroid1.unfoldableCard1.title": "1. Lataa sovellukset",
+  "takQuickstartAndroid1.unfoldableCard1.description1": "<h3>Lataa ATAK (1/2)</h3><strong>Lataa</strong> ATAK-CIV-sovellus Play Storesta ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
+  "takQuickstartAndroid1.unfoldableCard1.description2": "<h3>b. Lataa ATAK Data Sync-plugin (2/2)</h3><strong>Lataa</strong> ATAK Data Sync-plugin, ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
+  "takQuickstartAndroid1.unfoldableCard2.title": "2. Lataa viestiperusteet",
+  "takQuickstartAndroid1.unfoldableCard2.description1": "Lataa omat viestiperusteesi.  Paina vihreää <strong>Lataa viestiperustepaketti</strong>-nappia alta (sama nappi löytyy myös tämän sovelluksen etusivulta).<br><br>Tallenna .zip-tiedosto.",
+  "takQuickstartAndroid1.unfoldableCard2.description2": "",
+  "takQuickstartAndroid1.unfoldableCard3.title": "3. Avaa sovellus ja anna sille sen kysymät oikeudet",
+  "takQuickstartAndroid1.unfoldableCard3.description1": "Avaa sovellus. Anna kaikki oikeudet, mitä applikaatio pyytää.",
+  "takQuickstartAndroid1.unfoldableCard3.description2": "<em>Jos applikaatio antaa virheilmoituksen, valitse Wait.</em>",
+  "takQuickstartAndroid1.serviceInfoCardTitle": "ATAK"
 }
