Fixed issues with Tak help

--- a/src/views/products/data/tak/translations/ServiceTak.en.json
+++ b/src/views/products/data/tak/translations/ServiceTak.en.json
@@ -411,6 +411,9 @@
   "takUsageWin2.unfoldableCard4.note2": "Consider OPSEC. Do not bring operational enemy information into this - use cover terms.",
   "takUsageWin2.unfoldableCardExample.title": "<em>Example of Processing an Observation</em>",
   "takUsageWin2.unfoldableCardExample.step1": "You have received a notification from a watch post about a <em>speeding van</em>, resulting in a yellow observation marker. Open Marker Details and press Change Affiliation.",
+  "takUsageWin2.unfoldableCardExample.step2": "",
+  "takUsageWin2.unfoldableCardExample.step3": "",
+  "takUsageWin2.unfoldableCardExample.step4": "",
   "takUsageWin2.unfoldableCard5.title": "5. Decide Whether It Needs Immediate Reporting",
   "takUsageWin2.unfoldableCard5.step1": "Determine whether the observation is an <em>immediate reportable matter</em> or not.",
   "takUsageWin2.unfoldableCard5.note1": "IMPORTANT! If the observation is an immediate reportable matter, send a report using the prescribed messaging tools to the prescribed recipients.",
@@ -419,6 +422,7 @@
   "takUsageWin2.unfoldableCard7.step2": "Choose <strong>Yes</strong> to the Include Attachments question.",
   "takUsageWin2.unfoldableCard7.step3": "Pressing the Send button in the Marker Details menu opens the <strong>Send To</strong> menu on the right side.",
   "takUsageWin2.unfoldableCard7.step4": "Proceed with each <strong>processed</strong> observation in this manner.",
+  "takUsageWin2.unfoldableCard7.step5": "",
   "TAKUSAGEWIN3": "TAKUSAGEWIN3",
   "takUsageWin3.navbarTitle": "Usage Guide: WinTAK",
   "takUsageWin3.statusBarTitle": "Act as Command Post (3/4)",
