--- a/src/views/products/data/tak/translations/ServiceTak.fi.json
+++ b/src/views/products/data/tak/translations/ServiceTak.fi.json
@@ -659,6 +659,9 @@
   "takUsageWin2.unfoldableCard4.note2": "Huomioi TL JULK. Älä tuo käytössäsi olevaa yläjopon vihollistietoa tähän - käytä peitteitä.",
   "takUsageWin2.unfoldableCardExample.title": "<em>Esimerkki havainnon käsittelystä</em>",
   "takUsageWin2.unfoldableCardExample.step1": "Olet saanut ilmoituksen vartiopaikalta <em>lujaa poistuneesta pakettiautosta.</em> ja tästä keltaisen havaintomerkin. Avaa Marker Details ja paina Change Affiliation.",
+  "takUsageWin2.unfoldableCardExample.step2": "",
+  "takUsageWin2.unfoldableCardExample.step3": "",
+  "takUsageWin2.unfoldableCardExample.step4": "",
   "takUsageWin2.unfoldableCard5.title": "5. Päätä, onko heti ilmoitettava asia",
   "takUsageWin2.unfoldableCard5.step1": "Päätä, onko havainto <em>heti ilmoitettava asia</em> vai ei.",
   "takUsageWin2.unfoldableCard5.note1": "TÄRKEÄÄ! Jos havainto on heti ilmoitettava asia, lähetä ilmoitus käsketyillä viestivälineillä käsketyille vastaanottajille.",
